# tg-ai-companion

./: .editorconfig  .env.sample  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
images/localai/: Dockerfile
images/rust/: Dockerfile
src/: lib.rs  main.rs
src/handlers/: chat.rs  telegram.rs
src/middleware/: auth.rs
src/models/: chat.rs  mod.rs  telegram.rs
src/routes/: chat.rs  telegram.rs
src/services/: chat_api.rs  chat_api_impl.rs  mod.rs  telegram.rs  telegram_api.rs  telegram_api_impl.rs
tests/: handler_chat.rs  handler_telegram.rs  service_chat_api.rs  service_telegram.rs  service_telegram_api.rs
