[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
async-trait = "0.1.88"
dotenv = "0.15.0"
mockall = "0.13.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
