[package]
name = "tg_ai_companion"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0", features = ["macros"] }
actix-web-httpauth = "0.8.2"
async-trait = "0.1.88"
dotenv = "0.15.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.7.0"
mockall = "0.13.1"
